[package]
name = "test-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
libp2p = "0.48.0"
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.9.0"
futures = "0.3.15"
once_cell = "1.5"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
serde_json = "1.0"

# encryption
sha2 = "0.9.8"
hex = "0.4"

# logging
log = "0.4"
pretty_env_logger = "0.4"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]
